<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item

            android:id="@+id/nav_user_profile"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/UserProfile" />
        <item
            android:id="@+id/nav_manage_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/ManageCamera" />
        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/ic_brightness_5_black_24dp"
            android:title="@string/Theme" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/Logout" />
    </group>


</menu>
