<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:layout_height="wrap_content"
        >

        <include layout="@layout/app_bar_with_title_and_navigation" />

        <EditText
            android:id="@+id/edOldPassword"
            android:layout_width="357dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="112dp"
            android:backgroundTint="#1fa0c4"
            android:hint="@string/PleaseTypeOldPassword"
            android:inputType="textPassword"
            android:textColor="#9da8b9"
            android:textColorHint="#9da8b9"
            android:textSize="20dp"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edNewPassword"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#1fa0c4"
            android:hint="@string/PleaseTypeNewPassword"
            android:inputType="textPassword"
            android:textColor="#9da8b9"
            android:textColorHint="#9da8b9"
            android:textSize="20dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/edOldPassword"
            app:layout_constraintRight_toRightOf="@+id/edOldPassword"
            app:layout_constraintTop_toBottomOf="@+id/edOldPassword" />

        <EditText
            android:id="@+id/edReEnterPassword"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#1fa0c4"
            android:hint="@string/PleaseReTypeNewPassword"
            android:inputType="textPassword"
            android:textColor="#9da8b9"
            android:textColorHint="#9da8b9"
            android:textSize="20dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/edNewPassword"
            app:layout_constraintRight_toRightOf="@+id/edNewPassword"
            app:layout_constraintTop_toBottomOf="@+id/edNewPassword" />

        <TextView
            android:id="@+id/textViewDes"
            android:layout_width="297dp"
            android:layout_height="126dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#1fa0c4"
            android:lineSpacingExtra="10dp"
            android:text="@string/PasswordEditDes"
            android:textColor="#9da8b9"
            android:textColorHint="#9da8b9"
            android:textSize="20dp"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintLeft_toLeftOf="@+id/edReEnterPassword"
            app:layout_constraintRight_toRightOf="@+id/edReEnterPassword"
            app:layout_constraintTop_toBottomOf="@+id/edReEnterPassword" />

        <Button
            android:id="@+id/btnSavePassword"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/default_button_gradient"
            android:text="@string/Save"
            android:textColor="#ffffff"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/textViewDes"
            app:layout_constraintTop_toBottomOf="@+id/textViewDes" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
