<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.kshrd.ipcam.fragment.FragFbPasswordConfirm">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ed_fb_password"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textColor="@color/controller_default"
                android:textColorHint="#111211"
                app:layout_constraintHorizontal_bias="0.43"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDes" />

            <EditText
                android:id="@+id/ed_confirm_facebook"
                android:layout_width="333dp"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/ConfirmPassword"
                android:inputType="textPassword"
                android:textColorHint="#111211"
                app:layout_constraintLeft_toLeftOf="@+id/ed_fb_password"
                app:layout_constraintRight_toRightOf="@+id/ed_fb_password"
                app:layout_constraintTop_toBottomOf="@+id/ed_fb_password" />

            <Button
                android:id="@+id/btn_fb_confirm"
                android:layout_width="92dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/default_button_gradient"
                android:text="@string/Confirm"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="@+id/ed_confirm_facebook"
                app:layout_constraintRight_toRightOf="@+id/ed_confirm_facebook"
                app:layout_constraintTop_toBottomOf="@+id/ed_confirm_facebook" />

            <TextView
                android:id="@+id/textViewDes"
                android:layout_width="312dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:text="@string/FBConfirmPasswordDes"
                android:textColor="#111211"
                app:layout_constraintHorizontal_bias="0.41"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="81dp"
                android:layout_height="68dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher" />

        </android.support.constraint.ConstraintLayout>


    </FrameLayout>

</ScrollView>
